[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Art/BackGround.png" type="Texture" id=1]
[ext_resource path="res://UI/Buttons/blue_button12.png" type="Texture" id=2]
[ext_resource path="res://UI/Buttons/blue_button05.png" type="Texture" id=3]
[ext_resource path="res://assets/map1_tileset/map1_icon.PNG" type="Texture" id=4]
[ext_resource path="res://UI/Map_select.gd" type="Script" id=5]
[ext_resource path="res://assets/map2_tileset/map2_icon.PNG" type="Texture" id=6]

[node name="Map_select" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 924.0
margin_bottom = 500.0
rect_min_size = Vector2( 924, 250 )

[node name="Map1" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Map1"]
margin_left = 10.0
margin_top = 10.0
margin_right = 190.0
margin_bottom = 190.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map2" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_left = 232.0
margin_right = 432.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Map2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 190.0
margin_bottom = 190.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map3" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_left = 464.0
margin_right = 664.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Map4" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_left = 696.0
margin_right = 896.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/Map1" to="." method="_on_Map1_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Map2" to="." method="_on_Map2_pressed"]
